examples/test/testpolicy18519.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18519
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key42: value43
      key29: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value16
          key43: value43
      podSelector:
        matchLabels:
          key9: value32
          key23: value43
